--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify src/index.js -o dist/index.js",
     "watch": "watchify src/index.js -o dist/index.js -v"
   },
   "repository": {
@@ -18,7 +19,12 @@
   },
   "homepage": "https://github.com/haod98/spotify_api#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "spotify-web-api-js": "^1.5.1",
     "watchify": "^4.0.0"
+  },
+  "devDependencies": {
+    "tinify": "^1.6.1"
   }
 }
