--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "browserify src/index.js -o dist/index.js",
-    "watch": "watchify src/index.js -o dist/index.js -v"
+    "watch": "watchify src/index.js -o dist/index.js -v",
+    "scss": "sass --watch src/style.scss dist/style.css"
   },
   "repository": {
     "type": "git",
